--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html, body {
+  background-color: rgb(41, 41, 41);
+  height: 100%;
+  min-height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
